//
// Copyright 2020 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.examples.treehouse;

message GetCardsRequest {
  // An ISO-8601 formatted date. We use it to search for all the calendar events on this date.
  string date = 1;
}

message GetCardsResponse {
  repeated Card cards = 1;
}

// See https://material.io/components/cards#anatomy
message Card {
  string title = 1;
  string start_time = 2;
  string end_time = 3;
  string description = 4;
  // URL for downloading the photos.
  repeated string photos = 5;
}

service Treehouse {
  rpc GetCards(GetCardsRequest) returns (GetCardsResponse);
}
